# isit360

./: .gitignore  LICENSE  README.md  hw01.py
hw-01/: pyproject.toml
hw-02/: movies.csv
hw01/: Pipfile  README.md  hw01.py
hw01-bundler/: Pipfile  README.md  bundle.docx  bundle.py  pyproject.toml
hw02/: README.md  hw02.py  movies.csv  movies.html  movies.json  movies.xlsx  movies.xml  pyproject.toml
hw03/: README.md  hw03-homework.py  hw03-movies.py  hw03.py  hw03.sqlite3
hw03-scraper/: README.md  scraper.py  tomato-scraper.py
hw03-scraper/working/: movies.csv  tomatoes.db
hw04/: README.md  hw04.py  movies.sqlite3  pyproject.toml
hw04/hw04/: asgi.py  wsgi.py
hw04/movies/: models.py
hw05/: README.md  hw05.py  pyproject.toml
hw06/: Pipfile  Procfile  Procfile.windows  README.md  manage.py  pyproject.toml  requirements.txt
hw06/freshtomatoes/: asgi.py  settings.py  urls.py  wsgi.py
hw06/movies/: admin.py  views.py
hw06/movies/default_data/: map_movie_celeb.csv
hw06/movies/templates/movies/: base.html
hw06/yummytomatoes/: asgi.py  settings.py  urls.py
hw07/: Pipfile  README.md  db.sqlite3
hw07/common/: urls.py
hw07/movies/: urls.py  views.py
hw08/: README.md  db.sqlite3  manage.py
hw08-wip/: README.md  manage.py
hw09/: Pipfile  README.md  db.sqlite3  import_data.py
hw09-wip/: README.md
hw10/: README.md
hw10-wip/: Procfile
hwXX-wip/: README.md
hwXY-wip/: Pipfile  Procfile.windows
legacy/hw03-scraper/: README.md  pyproject.toml
legacy/hw03-scraper/working/: cache.db  map_movie_genre.csv
project/: README.md
(+118 files in other folders)
