[tool.poetry]
name = "hw06"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.10"
Django = "^4.0.4"
dj-database-url = "^0.5.0"
whitenoise = "^6.0.0"
psycopg2-binary = "^2.9.3"
waitress = "^2.1.1"
python-dotenv = "^0.20.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
