[tool.poetry]
name = "ddb-scraper"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.10"
selenium = "^4.1.3"
bs4 = "^0.0.1"
lxml = "^4.8.0"
python-dotenv = "^0.20.0"
sqlitedict = "^2.0.0"
python-slugify = "^6.1.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
